Mobile comparison complete. Issue with z-index of results page :before pseudo.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -2,6 +2,80 @@ body, * {
     //letter-spacing: $letter-spacing;
 }
 
+.menu-open,
+.shortlist-open {
+    &.results-page {
+        overflow: hidden; // Stop body scrolling
+
+        #resultspage_form {
+            z-index: initial;
+            position: static;
+        }
+
+        // Fade in the mask when shortlist is open
+        &:before {
+            opacity: $modal-backdrop-opacity;
+            pointer-events: initial;
+            z-index: 1035; // To be just below the open shortlist
+        }
+    }
+}
+
+.results-page.results-page-mobile {
+    // Fade in the mask when shortlist is open
+    &:before {
+        pointer-events: initial;
+        top: $mobile-header-height;
+        height: calc(100vh - #{$mobile-header-height});
+    }
+}
+
+// Reveal the menu
+.menu-open {
+    overflow: hidden;
+
+    &:before {
+        opacity: 0.5 !important;
+    }
+
+    .main-nav {
+        transform: translate3d(0, 0, 0);
+
+        .main-menu {
+            overflow-y: scroll;
+            overflow-x: hidden;
+            height: calc(100vh - 54px);
+        }
+    }
+}
+
+// Body class when filters are open
+.filters-open {
+    overflow: hidden;
+
+    .section-2 {
+        opacity: 0;
+        pointer-events: none;
+    }
+}
+
+// Compare shortlist area open
+.shortlist-open {
+    .popover:not(.popover-comparison) {
+        display: none !important;
+    }
+
+    // Hide the special offer tabs
+    .solutions-menu {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .compare-arrow {
+        transform: rotate3d(0, 0, 1, 180deg);
+    }
+}
+
 main {
     section {
         padding: 45px 0;
@@ -606,8 +680,8 @@ h6 {
 
 // Tooltip trigger on mobile
 .more-info-please {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
 }
 
 // SVG classes
